# macadamia

./: CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: gl.c.6D037A1F804B3D0B.idx  gl.h.D5C42D65D32641D5.idx  ma-window.c.0AE93557A95A9D68.idx  ma-window.h.BF2316412190D8DF.idx  main.c.1B095037374EF2E8.idx  x11.c.A0BE77939B305D3F.idx
docs/: conf.py  index.rst  ma_window.rst
docs/source/: index.rst
ma-window/: CMakeLists.txt  Makefile
ma-window/include/ma-window/: ma-window.h
ma-window/src/: ma-window.c  win32.c  x11.c
macademia/: CMakeLists.txt
macademia/include/macademia/: log.h  macademia.h  window.h
macademia/src/: log.c  window.c
macademia/src/platform/win32/: win32window.c
macademia/src/platform/x11/: x11window.c
sandbox/: CMakeLists.txt  Makefile
sandbox/src/: main.c
